--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,18 +1,24 @@
 /* Menu Styling */
-body {
-    margin: 0;
-    padding: 0; }
+body { margin: 0; }
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333; }
-nav ul li { float: left; }
+    background-color: rgb(0, 175, 0); }
+nav ul li { float: left }
 nav ul li a {
     display: block;
-    color: white;
-    text-align: center;
     padding: 14px 16px;
-    text-decoration: none; }
-nav ul li a:hover { background-color: #111111; }
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold; }
+nav ul li:hover { background-color: green; }
+
+/* Main Sections Styling */
+section { margin: 5px; }
+
+/* Footer Styling */
+footer { margin: 5px; }
