--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,17 @@
 /* Menu Styling */
 body { margin: 0; }
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(0, 175, 0); }
-nav ul li { float: left }
-nav ul li a {
+nav { 
+    background-color: rgb(0,175,0);
+    overflow: hidden; }
+nav a { 
+    float: left;
     display: block;
     padding: 14px 16px;
     color: black;
-    text-align: center;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold; }
-nav ul li:hover { background-color: green; }
+nav a:hover { background-color: green; }
 
 /* Main Sections Styling */
 section { margin: 5px; }
