--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,36 @@
-* { font-family: Arial, Helvetica, sans-serif; }
+/* General Styling */
+* { font-family: Arial, Helvetica, sans-serif }
+body { background-color: rgb(241, 238, 244); margin: 0 }
 
-/* Menu Styling */
-body { margin: 0; }
+/* Nav Bar Styling */
 nav { 
-    background-color: rgb(0,175,0);
-    overflow: hidden; }
+  background-color: rgb(22, 141, 22);
+  overflow: hidden }
 nav a { 
-    float: left;
-    display: block;
-    padding: 14px 16px;
-    color: black;
-    text-decoration: none;
-    font-weight: bold; }
-nav a:hover { background-color: green; }
+  float: left;
+  display: block;
+  padding: 14px 16px;
+  color: black;
+  text-decoration: none;
+  font-weight: bold }
+nav a:hover { background-color: rgb(107, 176, 107) }
+
+/* Logo, banner & contact info */
+.column { float: left }
+.row::after {
+  content: "";
+  clear: both;
+  display: table }
+#mail {
+  position: absolute;
+  top: 8px;
+  right: 20px;
+  font-size: 18px }
+#mirror { transform: scaleX(-1) }
 
 /* Main Sections Styling */
-section { margin: 10px; }
+section { margin: 10px }
 .required { color: red }
 
 /* Footer Styling */
-footer { margin: 10px; }
+footer { margin: 10px }
