--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,18 @@
 * { font-family: Arial, Helvetica, sans-serif }
 body { background-color: rgb(241, 238, 244); margin: 0 }
 
+/* Logo, banner & contact info */
+.column img { float: left; display: block; }
+#mail {
+  position: absolute;
+  top: 4px;
+  right: 20px;
+  font-size: 18px }
+#mirror { transform: scaleX(-1) }
+
 /* Nav Bar Styling */
 nav { 
+  clear: both;
   background-color: rgb(22, 141, 22);
   overflow: hidden }
 nav a { 
@@ -14,19 +24,6 @@ nav a {
   text-decoration: none;
   font-weight: bold }
 nav a:hover { background-color: rgb(107, 176, 107) }
-
-/* Logo, banner & contact info */
-.column { float: left }
-.row::after {
-  content: "";
-  clear: both;
-  display: table }
-#mail {
-  position: absolute;
-  top: 8px;
-  right: 20px;
-  font-size: 18px }
-#mirror { transform: scaleX(-1) }
 
 /* Main Sections Styling */
 section { margin: 10px }
