--- a/styles/manage_styles.css
+++ b/styles/manage_styles.css
@@ -248,7 +248,7 @@ main {
   cursor: pointer;
   transition: all 0.2s;
 }
-.btn-submit:hover {background-color: #445f7a;}
+.btn-submit:hover, .btn:hover {background-color: #445f7a;}
 .required-field { color: #e74c3c; }
 
 /* Delete EOIs tab */
@@ -264,6 +264,49 @@ main {
   border: none;
 }
 .btn-delete:hover { background: #c0392b; }
+
+/* Result page */
+.message-box {
+  padding: 15px 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+  border: 1px solid;
+}
+.message-success {
+  background-color: #d4edda;
+  color: #155724;
+  border-color: #c3e6cb;
+}
+.message-error {
+  background-color: #f8d7da;
+  color: #721c24;
+  border-color: #f5c6cb;
+}
+.action-buttons { margin-top: 20px; }
+.btn {
+  padding: 10px 20px;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  transition: all 0.2s;
+  background-color: #2c3e50;
+  color: white;
+}
+
+/* Table Styling */
+table, th, td { 
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center }
+th, td {
+  background-color: #fbffb0; 
+  width: 120px;}
+th:hover, td:hover{background-color: #f4ff26;}
 
 /* Footer Styling */
 footer {
