--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,9 @@ nav a {
   padding: 14px 16px;
   color: black;
   text-decoration: none;
-  font-weight: bold }
+  font-weight: bold;
+  transition: all 0.2s;
+}
 nav a:hover { background-color: rgb(107, 176, 107) }
 
 /* Main Section Styling */
