--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,6 +9,12 @@ body {
   background-color: rgb(241, 238, 244); 
   margin: 0 }
 
+p {
+    font-size: 1.1rem;
+    line-height: 1.7;
+}
+
+
 /* Logo, banner & contact info */
 header img { 
   float: left; 
@@ -32,7 +38,6 @@ nav a {
   font-weight: bold;
   transition: all 0.2s;
 }
-nav a:hover { background-color: rgb(107, 176, 107) }
 
 /* Main Section Styling */
 main {
@@ -158,7 +163,7 @@ input[type="radio"], input[type="checkbox"] {
 .radio-group label:has(input:checked), .checkbox-group label:has(input:checked) {
   color: #667eea;
   border-bottom-color: #667eea;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 /* Buttons */
@@ -176,10 +181,35 @@ input[type="radio"], input[type="checkbox"] {
   border: none;
   cursor: pointer;
 }
-#submit { background-color: lime }
-#submit:hover { background-color: rgb(0, 180, 0) }
-#reset { background-color: red }
-#reset:hover { background-color: rgb(170, 0, 0) }
+
+#submit { background: rgb(77, 173, 80);
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    display: inline-block;
+}
+#submit:hover {background: rgb(69, 160, 73);
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(76, 175, 80, 0.4);
+}
+#reset { background: rgb(189, 58, 58);
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-decoration: none;
+    display: inline-block;
+}
+#reset:hover { background-color: rgb(143, 35, 35);
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(112, 37, 37, 0.4);
+}
 
 /* Group Details */
 #abtpage section { 
