--- a/styles/manage_styles.css
+++ b/styles/manage_styles.css
@@ -22,7 +22,9 @@ header img {
 nav { 
   clear: both;
   background-color: rgb(22, 141, 22);
-  overflow: hidden }
+  overflow: hidden;
+  position: sticky;
+  top: 0; }
 nav a { 
   float: left;
   display: block;
